MODON MRE BPDEV/force-app/main/default/objects/Logger__c/Logger__c.object-meta.xml
<CustomObject>
    <description>Object to log all the Apex Exception, App Web Service exception and the requests and responses of external web-services.</description>
    <label>Logger</label>
    <nameField>
        <displayFormat>L{0000000000}</displayFormat>
        <label>Logger Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logger</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>