MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Actual_ADM_Charge_Without_Discount__c.field-meta.xml
<CustomField>
    <fullName>Actual_ADM_Charge_Without_Discount__c</fullName>
    <label>Actual ADM Charge (Without Discount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>