MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Applied_PDC_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_PDC_Amount__c</fullName>
    <label>Applied PDC Amount?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>