MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>oracle Integration</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Opportunity</fullName>
            </value>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>Payment &amp; Receipt</fullName>
            </value>
            <value>
                <fullName>Case &amp; Service Request</fullName>
            </value>
            <value>
                <fullName>Unit Management</fullName>
            </value>
            <value>
                <fullName>EOI Management</fullName>
            </value>
            <value>
                <fullName>Account &amp; Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>