MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>To capture the class name where the error occurred</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Down Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>