MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Collected_ADM_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collected_ADM_Amount__c</fullName>
    <label>Collected ADM Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>