MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>