MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/ExecutingProcessName__c.field-meta.xml
<CustomField>
    <fullName>ExecutingProcessName__c</fullName>
    <description>The business process where the class and method was invoked when the failure occurred</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>