MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/externalUpdate__c.field-meta.xml
<CustomField>
    <fullName>externalUpdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>externalUpdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>