MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/FlowName__c.field-meta.xml
<CustomField>
    <fullName>FlowName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>