MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Integration_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Integration_Request_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>