MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Integration_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Integration_Response_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>