MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Integration_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PDC Collected?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>