MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/KYC_Response__c.field-meta.xml
<CustomField>
    <fullName>KYC_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC Response</label>
    <referenceTo>KYC_Response__c</referenceTo>
    <relationshipLabel>Logger</relationshipLabel>
    <relationshipName>Logger</relationshipName>
    <type>Lookup</type>
</CustomField>