MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <description>The line number from where the exception was thrown</description>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>