MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The message of the exception.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>