MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Method name of the class where the failure occurred</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>