MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/No_Of_PDC_Collected__c.field-meta.xml
<CustomField>
    <fullName>No_Of_PDC_Collected__c</fullName>
    <label>No Of PDC Collected?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>