MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Pending_ADM_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_ADM_Amount__c</fullName>
    <formula>Actual_ADM_Charge_Without_Discount__c -  Collected_ADM_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending ADM Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>