MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Pending_Down_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Down_Payment_Amount__c</fullName>
    <formula>Total_Down_Payment__c -  Collected_Down_Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Down Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>