MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/Total_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Down_Payment__c</fullName>
    <label>Total Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>