MODON MRE BPDEV/force-app/main/default/objects/Logger__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM Fees and Dari Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>