MODON MRE BPDEV/force-app/main/default/objects/Logger__c/listViews/All_Logs.listView-meta.xml
<ListView>
    <fullName>All_Logs</fullName>
    <columns>NAME</columns>
    <columns>ExceptionMessage__c</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>StackTrace__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Integration_Response_Body__c</columns>
    <columns>Integration_Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LogType__c</field>
        <operation>equals</operation>
        <value>Flow Exception</value>
    </filters>
    <label>All Logs</label>
</ListView>