MODON MRE BPDEV/force-app/main/default/objects/Logger__c/listViews/UAEDDS_Integration_Logs.listView-meta.xml
<ListView>
    <fullName>UAEDDS_Integration_Logs</fullName>
    <columns>NAME</columns>
    <columns>ExecutingProcessName__c</columns>
    <columns>MethodName__c</columns>
    <columns>LogType__c</columns>
    <columns>Integration_Status_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExecutingProcessName__c</field>
        <operation>startsWith</operation>
        <value>UAEDDS_</value>
    </filters>
    <label>UAEDDS Integration Logs</label>
</ListView>